<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/crust"
    android:id="@+id/post_fragment"
    android:orientation="vertical"
    tools:context=".view.profile.LoginFragment">

    <EditText
        android:id="@+id/username_text"
        android:layout_margin="4dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:textColorHint="@color/surface"
        app:layout_constraintVertical_chainStyle="packed"
        android:inputType="text"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/email_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/email_text"
        android:layout_margin="4dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:textColorHint="@color/surface"
        app:layout_constraintVertical_chainStyle="packed"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/password_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_text"
        />

    <EditText
        android:id="@+id/password_text"
        android:layout_margin="4dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/surface"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="200dp"
        android:layout_margin="4dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_text"
        android:background="@drawable/post_card_bg"
        android:text="@string/login"
        android:textColor="@color/accent"
        android:id="@+id/login_button"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="200dp"
        android:layout_margin="4dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        android:background="@drawable/post_card_bg"
        android:text="@string/register"
        android:textColor="@color/accent"
        android:id="@+id/register_button"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
